add configz
